[package]
name = "rhai-memflow"
version = "0.1.2"
authors = ["Mason Reed <msr@emesare.com>"]
edition = "2021"
readme = "README.md"
keywords = ["memflow", "rhai"]
description = "Rhai package for memflow"
repository = "https://github.com/emesare/rhai-memflow/"
license = "MIT"

[dependencies]
rhai = { version = "1.9", features = ["internals"] }
memflow = { version = "^0.2.0-beta", features = ["plugins", "dummy_mem"] }
cglue = "0.2"
widestring = "1.0"

[dev-dependencies]
clap = "3.2"
